# kurvengefahr

./: .env.development  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml  share-api.yml
crate/: Cargo.toml
crate/fonts/: hershey.json
crate/src/: boolean.rs  cleanup.rs  clip.rs  compose.rs  dxf.rs  fill.rs  generative.rs  geom.rs  hatch.rs  lib.rs  model.rs  plan.rs  poly.rs  raster.rs  rng.rs  shapes.rs  share_pow.rs  spiral.rs  stroke_model.rs  svg.rs  tess.rs  text.rs  typeset.rs
crate/src/effects/: bulge.rs  hull.rs  mod.rs  offset.rs  roughen.rs  sketch.rs  smooth.rs  taper.rs  twist.rs  wave.rs
crate/src/filters/: bulge.rs  mod.rs  roughen.rs  sketch.rs  smooth.rs  twist.rs  wave.rs
crate/src/logo/: analyze.rs  builtins.rs  eval.rs  lex.rs  mod.rs  parse.rs  turtle.rs  value.rs
crate/src/raster/: cells.rs  centerline.rs  contourmap.rs  contours.rs  flow.rs  mod.rs  scanlines.rs  spiral.rs  tone.rs  tsp.rs
crate/src/wireframe/: mesh.rs  mod.rs  stl.rs  view.rs
crate/tests/: fixtures.json
docs/: README.md  browser-api.md  editor.md  effects.md  elements.md  file-format.md  index.md  logo-reference.md  logo-tutorial.md  logo.md  machines.md  plotting.md  screenshot.mjs  sharing.md  showcase.kgz
public/: CNAME
share-api/: Cargo.toml  Dockerfile  README.md
share-api/dev/: compose.yml  garage-init.py  garage.toml
share-api/src/: cache.rs  config.rs  error.rs  id.rs  lib.rs  main.rs  metrics.rs  pow.rs  ratelimit.rs  routes.rs  storage.rs
share-api/testdata/: pow_vectors.json
share-api/tests/: api.rs
src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
src/canvas/: Canvas.tsx  CanvasContextMenu.tsx  ClipNode.tsx  ContainerNode.tsx  DrawingPreview.tsx  ElementNode.tsx  FiducialLayer.tsx  GhostLayer.tsx  InkStrokes.tsx  NodeEditLayer.tsx  PreviewLayer.tsx  SnapLayer.tsx  TurtleMarker.tsx  ViewerCanvas.tsx  drawing.ts  importDxf.ts  importImage.ts  importSvg.ts  nodeSelection.ts  penWidth.ts  snap.ts  useNodeInteraction.ts  useRasterImage.ts  viewport.ts
src/core/: generation.ts  profileValidation.test.ts  (+3 more)
tools/: README.md  convert_weights.py  export_golden.py  gen_hershey.py  grblhal-panel.html  reference.py  screenshot.mjs
(+173 files in other folders)
