[package]
name = "kg_toolpath"
version = "0.1.0"
edition = "2021"
description = "Toolpath generation for Kurvengefahr (pen-plotter CAM)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Robust polygon boolean ops (union/intersect/difference/xor) for shape combining; pure Rust,
# default features only (no rayon) so it stays WASM-friendly.
i_overlay = { version = "7", default-features = false }

[profile.release]
opt-level = "s"
lto = true
