[package]
name = "kg_core"
version = "0.1.0"
edition = "2021"
description = "Core compute for Kurvengefahr (pen-plotter CAM), compiled to WASM: vector shapes & multi-contour paths, polygon booleans, hatch fills, SVG import, raster stylization, the handwriting RNN, plus clipping and stroke-ordering."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Robust polygon boolean ops (union/intersect/difference/xor) for shape combining; pure Rust,
# default features only (no rayon) so it stays WASM-friendly.
i_overlay = { version = "7", default-features = false }
usvg = { version = "0.47.0", default-features = false }

[profile.release]
opt-level = "s"
lto = true
